--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "numpy >= 1.23.0",
     "matplotlib >= 3.6.2",
     "typeguard >= 2.13.3"]
+license = {file = "LICENSE.md"}
 
 [project.urls]
 Home = "https://github.com/wjbg"
